--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,9 @@
   "parser": "babel-eslint",
   "rules": {
     "comma-dangle": 0,
-    "strict": 0
+    "strict": 0,
+    "new-cap": [2, {
+      "capIsNewExceptions": ["Map", "Set", "List"]
+    }]
   }
 }
